<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:title="@string/settings_base">
        <Preference
            android:key="@string/key_theme"
            android:order="1"
            android:title="@string/theme"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">
        <Preference
            android:key="@string/key_cache"
            android:order="2"
            android:title="@string/clear_cache"
            tools:summary="16KB"/>
        <Preference
            android:key="@string/key_feedback"
            android:order="3"
            android:title="@string/feedback"
            android:summary="@string/feedback_like_or_unlike"/>
    </PreferenceCategory>

</PreferenceScreen>