<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gold"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/gold" />
        <item
            android:id="@+id/nav_oschina"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/oschina" />
        <item
            android:id="@+id/nav_gank"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/gank" />
    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/like" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
